Fix some issue with scrollbars when page was too long

--- a/static/styles/styles.css
+++ b/static/styles/styles.css
@@ -69,3 +69,7 @@ html, body {
   }
 }
 
+.CodeMirror-scroll {
+  height: calc(100vh - 154px);
+}
+
